# dev

./: .env.example  .gitignore  CURSOR_HANDOFF.md  LICENSE  README.md  app.json  pyproject.toml  requirements.txt  stickman-premium.html  stickman.html
.github/workflows/: ci.yml  scheduled-posting.yml
app/: _layout.tsx  checkout.tsx  compare.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  dashboard.tsx  expiry.tsx  index.tsx  insights.tsx  inventory.tsx  scan.tsx  settings.tsx
app/insight/: [type].tsx
app/product/: [barcode].tsx  new.tsx
app/recording/: [id].tsx
components/: ConfidenceIndex.tsx  DetailSection.tsx  ErrorBoundary.tsx  MomentItem.tsx  RecordingCard.tsx  RecordingListSkeleton.tsx  SearchBar.tsx  ToneBreakdown.tsx  TopicsChart.tsx  TranscriptView.tsx
content-pipeline/: .env.local.example  README.md  package-lock.json  package.json  proxy.ts  vercel.json
content-pipeline/app/: layout.tsx
content-pipeline/app/dashboard/: layout.tsx  page.tsx  run-pipeline-button.tsx
content-pipeline/app/dashboard/analytics/: charts.tsx  page.tsx
content-pipeline/app/dashboard/calendar/: page.tsx  post-card.tsx
content-pipeline/app/login/: actions.ts  login-form.tsx  page.tsx
content-pipeline/docs/: asset-pipeline-safety.md  brand-voice-qa-rubric.md
content-pipeline/lib/: anthropic.ts  dateRange.ts  getRecentRejections.ts  logAgentCall.ts  platformCaps.ts  platformTokens.ts  rubric.ts
content-pipeline/lib/integrations/: elevenlabs.ts  ffprobe.ts  instagram.ts  kling.ts  pexels.ts  shotstack.ts  tiktok.ts  youtube.ts
content-pipeline/lib/supabase/: client.ts  middleware.ts  server.ts  storage.ts
content-pipeline/qa-calibration/: manifest.json
content-pipeline/qa-calibration/bad/: bad-01-persona-credential-claim.txt  bad-02-persona-identity-leak.txt  bad-03-instructional-dosage.txt  bad-04-instructional-howto.txt  bad-05-sourcing-hearsay.txt  bad-06-sa-legal-minor-named.txt  bad-07-tone-sensational.txt  bad-08-structure-skips-mechanism.txt  bad-09-banned-phrase-exact.txt  bad-10-ongoing-case-speculation.txt
content-pipeline/qa-calibration/good/: good-01-farmstead-poisoning.txt  good-02-harbour-disappearance.txt  good-03-clinic-overdose.txt  good-04-vineyard-fire.txt  good-05-mining-town-drowning.txt  good-06-township-cult-deaths.txt  good-07-hit-and-run-reconstruction.txt  good-08-game-lodge-death.txt  good-09-factory-explosion.txt  good-10-coastal-poisoning-cluster.txt
content-pipeline/scripts/: calibrate-qa.ts
content-pipeline/supabase/migrations/: 0001_init.sql  0002_feedback_loop.sql  0003_platform_publishing.sql
data/: content_queue.example.json  content_queue.video.example.json
docs/: GETTING_STARTED.md  design-tokens.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/providers/: map_provider.dart
flutter_app/lib/services/: booking_service.dart  notification_service.dart  payment_service.dart  photo_service.dart  pro_service.dart
flutter_app/lib/utils/: constants.dart
flutter_app/lib/widgets/: pro_preview_card.dart  trust_badge.dart
hooks/: useNetworkStatus.ts  useOnboarding.ts  useRecordings.ts  useSync.ts  useWatchState.ts
lib/: supabase.ts  tokens.ts
mock/: insights.ts  recordings.ts  transcripts.ts
services/: claude.ts  supabase.ts  whisper.ts
src/ai_social_pipeline/: __init__.py  cli.py  config.py  content_generator.py  pipeline.py  scheduler.py  storage.py
styles/: tokens.css
supabase/: config.toml
supabase/functions/bookings/: index.ts
supabase/functions/notifications/: index.ts
supabase/functions/payments/: index.ts
supabase/migrations/: 003_device_tokens.sql
tests/: conftest.py  test_cli.py  test_content_generator.py  test_media.py  test_pipeline.py  test_platforms.py  test_scheduler.py  test_storage.py
types/: index.ts
utils/: formatting.ts  insights.ts
(+53 files in other folders)
