[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-social-pipeline"
version = "0.3.0"
description = "AI-powered social media automated posting pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
twitter = ["tweepy>=4.14"]
linkedin = ["requests>=2.31"]
youtube = ["requests>=2.31"]
tiktok = ["requests>=2.31"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]
all = [
  "openai>=1.30",
  "tweepy>=4.14",
  "requests>=2.31",
]

[project.scripts]
ai-social-pipeline = "ai_social_pipeline.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=ai_social_pipeline --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 120
target-version = "py310"
