[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-social-pipeline"
version = "0.3.0"
description = "Lightweight AI pipeline to generate and publish social content to X, LinkedIn, YouTube, and TikTok"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HMalepe" }]
keywords = ["social-media", "automation", "tiktok", "youtube", "twitter", "openai", "scheduler"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Multimedia :: Video",
]

dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/HMalepe/Automated-social-media-poster"
Repository = "https://github.com/HMalepe/Automated-social-media-poster"
Issues = "https://github.com/HMalepe/Automated-social-media-poster/issues"

[project.optional-dependencies]
openai = ["openai>=1.30"]
twitter = ["tweepy>=4.14"]
linkedin = ["requests>=2.31"]
youtube = ["requests>=2.31"]
tiktok = ["requests>=2.31"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]
all = [
  "openai>=1.30",
  "tweepy>=4.14",
  "requests>=2.31",
]

[project.scripts]
ai-social-pipeline = "ai_social_pipeline.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=ai_social_pipeline --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]
